# symman

./: Cargo.toml  README.md  README_zh.md
.github/workflows/: release.yml
src/: cli.rs  commands.rs  common.rs  db.rs  error.rs  main.rs  platform.rs
src/commands/: check.rs  list.rs  new.rs  remove.rs
src/db/: migrations.rs  queries.rs
src/platform/: unix.rs  windows.rs
